--- a/toast/css/response.css
+++ b/toast/css/response.css
@@ -66,7 +66,8 @@ html,body{
     }
 #main_visual{
     height:auto;
-}  
+}
+    
 .visual-box{
     width:500%;
     margin-left:-100%;
@@ -93,6 +94,9 @@ html,body{
      #main .visual-box>li:nth-child(5){
     background-image:url(../img/mobile-visual1.jpg);
     
+}
+#main .visual-box>li img{
+   display:none;
 }
 #main .visual-box>li img{
    display:none;
@@ -164,10 +168,10 @@ html,body{
 }
 #con3 p>a, #con4 p>a, #con5 p>a{
     height:100%;
-    line-height: 18px;
-    font-size:13px;
+    line-height: 1.5;
+    font-size:1.2em;
     font-weight:normal;
-    
+    padding:30% 5%;
 }
 #con3 a,#con4 a,#con5 a{
     color:#fff;
@@ -178,17 +182,17 @@ html,body{
     background:none;
     padding:0;
     display:inline-block;
-    width:70px;
-    height:25px;
-    line-height:25px;
+    width:50%;
+    height:42px;
+    line-height:42px;
     position:absolute;
     left:50%;
     transform:translateX(-50%);
-    bottom:8%;
+    bottom:10%;
     
     }
 #con3 .con-image-box, #con4 .con-image-box, #con5 .con-image-box{
-    height:55vw;
+    height:30vw;
 }
 #con1 p,#con2 p{
  display:none;        
@@ -225,7 +229,7 @@ html,body{
     display:inline-block;
     width:100%;
     height:100%;
-    font-size:30px;
+    font-size:2em ;
     margin:0;
     padding:150px 0 100px;
     background:rgba(0,0,0,0.6);
@@ -246,7 +250,7 @@ html,body{
     padding-bottom:100px;
  }
 #main .visual-box>li,#con6{  
-    height:110vw;
+    height:80vw;
 }
 #con6 span{
     display:inline-block;
@@ -273,45 +277,41 @@ html,body{
 .brand-con {
     width:80%;
 }
-.brand-text{
-    padding-top:30px;
-
-}
 .brand-text .brand-text-title{
     margin-bottom: 15px;
-    font-size:20px;
+    font-size:1.5em;
     letter-spacing:13px;      
 }
 #icon dt{
     font-size:15px;    
 }    
 .brand-text p{
-    font-size:13px;
+    font-size:0.5em;
     line-height: 150%;
     width:100%;
     margin:0 auto;
     }
     .brand-link{
         width:25%;
-        height:auto;
+        height:20vw;
         margin:3% auto;
     }
     .brand-link>a{
-        padding-top:20px; 
+        padding-top:40%; 
     }
     .brand-link span{
-        font-size:20px;
-        line-height:0;
+        font-size:2.5em;
+        line-height:1;
     }
     .brand-link span:last-child{
-        font-size:10px;
+        font-size:2.0em;
     }
     .media-wrap{
         height:auto;
     }
     .media-wrap h2{
         margin-bottom:42px;
-        font-size:24px;
+        font-size:2em;
     }
     .media-list li{
         display:none;
@@ -594,7 +594,7 @@ html,body{
     
     }
 #con3 .con-image-box, #con4 .con-image-box, #con5 .con-image-box{
-    height:55vw;
+    height:45vw;
 }
 #con1 p,#con2 p{
  display:none;        
