--- a/toast/css/signup.css
+++ b/toast/css/signup.css
@@ -13,8 +13,7 @@ form{
 form p{
     width:80%;
     margin:0 auto;
-    margin-bottom:30px;
-    
+    margin-bottom:30px; 
 }
 strong,.orange-text{
     color:orange;
@@ -27,7 +26,7 @@ form legend{
     font-weight:bold;
     margin-bottom:50px;
 }
-label, .address-label{
+.alter-label,label, .address-label{
     display:inline-block;
     width:25%;
     height:50px;
@@ -45,19 +44,21 @@ label, .address-label{
 #postcode, #postcode2{
     width:15%;
 }
-input[type=text],input[type=password], input[type=tel],#mail-select{
+input[type=text],input[type=password], input[type=tel],select{
     width:30%;
     height:40px;
     padding:10px 10px;
     box-sizing:border-box;
     border:1px solid #419400;
-    
+}
+.cal-type, .usergender{
+    width:10%;
 }
 .pass2>span{
     color:#f00;
     font-size:12px;
 }
-#usermail, #usermail2, #mail-select{
+#usermail, #usermail2, #mail-select, .userbirth{
     width:15%;
 }
 .green-btn{
@@ -103,11 +104,14 @@ form .userphone{
     form legend{
         font-size:18px;
     }
-    input[type=text],input[type=password], input[type=tel],#mail-select{
+    input[type=text],input[type=password], input[type=tel],#mail-select,.userbirth{
         width:100%;
         height:30px;
     }
-    label{
+    .cal-type, .usergender{
+        width:20%;
+    }
+    label, .alter-label{
         width:80%;
         font-size:15px;
     }
@@ -117,7 +121,10 @@ form .userphone{
     #usermail,#usermail2,#mail-select, #userphone,#userphone2,#userphone3,#postcode,#postcode2{
         width:30%;
     }
-    #mail-select{
+    .userbirth{
+        width:18%
+    }
+    select{
          padding:2px;
     }
     .btn-wrap{
