--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ section{
     background-color:skyblue;
     color:#fff;
 }
-.web-list li:nth-child(3):hover .web-img>img{
+.web-list li:nth-child(2):hover .web-img>img{
     top:-850px;
 }
 .web-list li:nth-child(5):hover .web-img> img{
@@ -356,7 +356,7 @@ p.info-con{
     width:100px;
     height:50px;
     line-height:50px;
-    margin:auto;
+    margin:0 10px 10px 0;
     box-sizing:border-box;
     background-color:skyblue;
     color:#fff; 
@@ -364,6 +364,48 @@ p.info-con{
 }
 .web-list-button{
     display:none;
+}
+.info-con a.main-btn{
+    width:430px;
+    margin-right:0;
+}
+.web-list .web-info .green-table a{
+    background-color:#419400;
+}
+.web-list .web-info .green-table a:hover{
+    background-color:#01682f;
+}
+.web-list .web-info .black-table a{
+    background-color:#555;
+}
+.web-list .web-info .black-table a:hover{
+    background-color:#000;
+}
+.web-list .web-info .sky-table a{
+    background-color:#14b8db;
+}
+.web-list .web-info .sky-table a:hover{
+    background-color:#1facc0;;
+}
+.web-list .web-info .purple-table a{
+    background-color:#7808b9;
+}
+.web-list .web-info .purple-table a:hover{
+    background-color:#4f047a;;
+}
+.web-list .web-info .white-table a{
+    background-color:#fff;
+    border:1px solid #000;
+    box-sizing:border-box;
+    color:#333;
+    transition:all 0.5s;
+}
+.web-list .web-info .white-table a:hover{
+    background-color:#000;
+    color:#fff
+}
+table{
+    margin:auto;
 }
 .mobile-box{
     width:300px;
