--- a/toast/css/login.css
+++ b/toast/css/login.css
@@ -88,7 +88,7 @@ input[type="submit"]{
 #sukbong-login:hover, .btn-wrap a:hover{
     background-color:#01682f;
 }
-@media all and (min-width: 0px) and (max-width: 900px){
+@media all and (min-width: 501px) and (max-width: 900px){
     form{
         padding: 30px 0
     }
@@ -97,5 +97,26 @@ input[type="submit"]{
     }
     label{
         font-size:16px;
+    }
+}
+@media all and (min-width: 0px) and (max-width: 500px){
+    form{
+        padding: 30px 0
+    }
+    form p{
+        width:80%;
+    }
+    form input[type="text"],input[type="password"]{
+        width:100%;
+    }
+    form legend{
+        width:80%;
+        font-size:15px;
+        line-height:20px;
+        margin-bottom:20px;
+    }
+    label{
+        font-size:16px;
+        display:block;
     }
 }
