--- a/toast/css/signup.css
+++ b/toast/css/signup.css
@@ -96,7 +96,7 @@ input[type="reset"]{
 form .userphone{
     width:20%;
 }
-@media all and (min-width: 0px) and (max-width: 900px){
+@media all and (min-width: 501px) and (max-width: 900px){
     form{
         padding: 30px 0
     }
@@ -130,3 +130,45 @@ form .userphone{
         width:60%;
     }
 }
+@media all and (min-width: 0px) and (max-width: 500px){
+    form{
+        padding: 30px 0
+    }
+    form legend{
+        font-size:18px;
+    }
+    input[type=text],input[type=password], input[type=tel],#mail-select,.userbirth{
+        width:100%;
+        height:30px;
+    }
+    .cal-type, .usergender{
+        width:49%;
+    }
+    label, .alter-label{
+        width:80%;
+        font-size:15px;
+    }
+    #userid{
+       width:75%; 
+    }
+    #usermail,#usermail2,#mail-select, #userphone,#userphone2,#userphone3,#postcode,#postcode2{
+        width:29%;
+    }
+    .userbirth{
+        width:30%;
+    }
+    select{
+         padding:2px;
+    }
+    .btn-wrap{
+        width:60%;
+    }
+    .green-btn{
+        width:20%;
+        font-size:12px;
+    }
+    nput[type="submit"], input[type="reset"]{
+        width:48%;
+    }
+}
+
