--- a/toast/css/road.css
+++ b/toast/css/road.css
@@ -27,6 +27,7 @@
     }
     .address-mark{
         width:300px;
+        font-size:13px;
         text-align:center;
         padding:6px 0;
     }
