--- a/css/response.css
+++ b/css/response.css
@@ -3,7 +3,7 @@
     .main-menu a{
         letter-spacing: 1px;
     }    
-    .greeting-list>li{
+    .greeting-list p{
          font-size:70px;   
     }
     section{
