--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 a{
     text-decoration:none; 
-    color:#fff
+    color:#333;
 }
 .modal{
     background:rgba(0,0,0,0.5);
@@ -26,7 +26,7 @@ a{
     width:100%;
     position:fixed;
     z-index:10;
-    background-color:#000;
+    background-color:#fff;
 }
 h1{
     width:100px;
@@ -76,8 +76,8 @@ nav{
     letter-spacing: 5px;
 }
 .main-menu li>a.highlight{
-    background-color:#fff;
-    color:#333;
+    background-color:#333;
+    color:#fff;
     text-align:center;
 }
 .main-menu li>a.highlight:hover{
