--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 a{
     text-decoration:none; 
     color:#333;
@@ -108,22 +109,22 @@ section{
     width:100%;
     position:relative;
 }
-#profile-wrap{
+#icon-wrap{
       background:url('../img/galaxy2.jpg');
      background-attachment: fixed;
 }
-#icon-wrap>article{
+#profile-wrap>article{
     width:1400px;
     margin:auto;
     padding:100px 0;
     
 }
-#icon-wrap>article:after{
+#profile-wrap>article:after{
     display:block;
     content:"";
     clear:both;
 }
-#icon-wrap div{
+#profile-wrap div{
     float:left;
 }
 .profile-info p{
@@ -143,9 +144,12 @@ section{
 .greeting-list>p{
     width:100%;
     color:#fff;
+    font-family: 'Righteous', cursive;
     font-size:100px;
     display:none;
     text-align:center;
+    
+
 }
 .greeting-list>p:first-child{
     display:block;
@@ -191,7 +195,7 @@ section{
     width:250px;
     height:410px;
     float:left;
-    margin-right:250px;
+    margin-right:50px;
     background:#fff;
     padding:25px;
 }    
