--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,16 @@ section{
         top:50%;
         transform:translate(-50%,-50%)
     }
+.donut-control-list>li{
+    width:40px;
+    height:40px;
+    cursor: pointer;
+    border:1px solid #fff;
+    position:absolute;
+    left:50%;
+    top:90%;
+    transform:translateX(-50%);
+}    
 .icon-list img{
     position:absolute;
     left:50%;
