--- a/css/response.css
+++ b/css/response.css
@@ -1,32 +1,72 @@
 @charset "utf-8";
 @media all and (min-width: 901px) and (max-width: 1430px){
+    html{
+        font-size:14px;
+    }
+    #main-wrap .realm, #footer-wrap{
+        height:auto;
+    }
+    #main-wrap article,#footer-wrap article{
+        padding-top:70px;
+        height:auto;
+        margin:auto;
+    }
+    #main-wrap .center-wrap, #footer-wrap .center-wrap{
+        width:90%;
+        margin:auto;
+    }
+    h2{
+        width:50%;
+        margin:auto;
+        position:static;
+        writing-mode:horizontal-tb;
+        transform: translateY(0%); 
+    }
     .main-menu a{
         letter-spacing: 1px;
     }    
-    .greeting-list p{
-         font-size:70px;   
-    }
     section{
         width:100%;
     }
-    .profile-info{
-        width:50%;
+    #main-wrap #visual-wrap{
+        height:80vh;
+        background-repeat:no-repeat;
+        background-size:cover;
     }
-    .icon-list, .web-list, #icon-wrap>article{
-        width:80%;
+    .greeting-list>p{
+        position:absolute;
+        left:50%;
+        top:50%;
+        transform:translate(-50%,-50%);
+    }
+    .wheel-box{
+        bottom:5%;
+    }
+    @keyframes mouseani{
+        0%{bottom:5%}
+        50%{bottom:7%}
+        100%{bottom:5%}
+    }  
+    .profile-img{
+        width:150px;
+        height:150px;
+    }
+    .icon-list, .web-list{
+        width:100%;
+        padding-top:0;
     }
     .icon-list li{
         width:20%;
-        padding:5%;
-        margin-right:5%;
-    }
-    .icon-list li:last-child{
         margin-right:0;
     }
-   #web-wrap .web-list li{
+    .icon-list .icon-bg{
+        width:150px;
+        height:150px;
+    }
+    #web-wrap .web-list li{
         width:45%;
-        margin-right:8%;
-       
+        margin-right:10%;
+        margin-bottom:10%;
     }
     #web-wrap .web-list li:nth-child(2n){
         margin-right:0;
@@ -50,79 +90,177 @@
 }
 /*mobile start*/
 @media all and (min-width: 0px) and (max-width: 900px){
+   html{
+       font-size:12px;
+   }
+   h1{
+       width:50%;
+   }
+    #main-wrap .realm, #footer-wrap{
+        height:auto;
+    }
+    #main-wrap #visual-wrap{
+        height:80vh;
+        background-repeat:no-repeat;
+        background-size:cover;
+    }
+   
+    #main-wrap article,#footer-wrap article{
+        padding-top:70px;
+        height:auto;
+        margin:auto;
+    }
+    #main-wrap .center-wrap, #footer-wrap .center-wrap{
+        width:90%;
+        margin:auto;
+    }
+    .profile-info li, .icon-list li{
+        display:inline-block;
+    }
+    h2{
+        width:100%;
+        
+        position:static;
+        writing-mode:horizontal-tb;
+        transform: translateY(0%); 
+    }
     .wheel-box{
         bottom:5%;
     }
+    @keyframes mouseani{
+        0%{bottom:5%}
+        50%{bottom:7%}
+        100%{bottom:5%}
+    }  
     .greeting-list{
        padding-top:260px;
+    }
+    .greeting-list>p{
+        width:90%;
+        font-size:4.17rem;
+        position:absolute;
+        left:50%;
+        top:50%;
+        transform:translate(-50%,-50%);
     }
     nav{
         width:100%;
     }
     .main-menu a{
         letter-spacing: 1px;
-        font-size: 12px;
+       
     }    
-    #visual-wrap{
-        background-size:contain;
-        height:500px;
+    .profile-img{
+        width:150px;
+        height:150px;
     }
-    .greeting-list p{
-         font-size:35px;   
-    }
-    section{
-        width:100%;
+    .profile-title{
+        margin:0;
     }
     .profile-info{
-        width:80%;
+        width:100%;
     }
-    .icon-list, .web-list, #icon-wrap>article, .contact-list{
-        width:80%;
-        overflow:hidden;
-    }
-    .icon-list li{
-        width:90%;
+    #profile-wrap .profile-info li{
+        width:100%;
+        float:none;
         height:auto;
+        margin:10px auto;
+        padding:3%;
+    }
+    .icon-list{
+        display:block;
+        padding:0;
+    }
+    #icon-wrap .icon-list li{
+        width:100%;
+        height:auto;
+        padding:0;
         clear:both;
         margin-right:0;
         margin-bottom:5%;
+        padding-top:5%;
     }
-    
+    #icon-wrap .icon-list li::after{
+        display:block;
+        content:"";
+        clear:both;
+    }
+    .icon-info{
+        display:flex;
+        align-items: center;
+    }
+    .icon-list li:nth-child(even) .icon-info{
+        flex-direction: row-reverse;
+    }
+    .icon-list .icon-bg{
+        width:150px;
+        height:150px;
+    }
+    .icon-list .icon-con{
+        width:calc(100% - 160px);
+        height:auto;;
+        line-height:2;
+        padding:5px;
+        margin:0 0 0 10px;
+        border-radius:10px;
+        vertical-align:middle;
+    }
+    #icon-wrap .icon-list li:nth-child(even) .icon-bg{
+      
+    }
+    #icon-wrap .icon-list li:nth-child(even) .icon-con{
+        height:auto;
+        margin:0 10px 0 0;
+    }
     .icon-list li img{
-        float:left;
         width:30%;
     }
-    .icon-list li p{
-        margin-left:35%;
-        
-    }
     .icon-list .icon-title {
-        text-align:left;
-        font-size:15px;
-        padding:0;
+        width: 150px;
+       
+        padding:10px 0;
+    }
+    #icon-wrap .icon-list li:nth-child(even) .icon-title {
+        margin-left:calc(100% - 150px);
     }
     .icon-list li:last-child{
         margin-right:0;
     }
+    .icon-space span{
+        line-height:15px;
+      
+    }
+    .donut-control{
+        top:180px;
+    }
     #web-wrap{
          position:relative;
     }
+    #web-wrap article{
+        position:relative;
+    }
+    #web-wrap .web-list{
+        width:100%;
+        padding:50px 0;
+        overflow:hidden;
+    }
     #web-wrap .web-list li{
         width:95%;
+        margin:auto;
         height:100%;
-        margin-right:8%;
         display:none;
+        float:none;
     }
-     .web-list li, .web-img {
+    .web-list li, .web-img {
         height:250px;
     }
-    .web-list .web-info table{
-        width:100%;
-        border-collapse: separate;
+    .web-info {
+        width:90%;
+        padding:2%;
     }
-    .web-list .web-info td{
-        width:22%;
-        margin-right:4%;
+    .web-info ul{
+        width:100%;
+        margin:auto;
     }
     .info-con a.main-btn{
         width:100%;
@@ -133,21 +271,30 @@
     #web-wrap .web-list li.web-on{
         display:block;  
         box-shadow: 3px 3px 3px 3px grey;
+    }
+    .web-list .web-source{
         
     }
     .web-list-button{
         display:block;
-        width:96%;
+        width:100%;
         overflow:hidden;
         position:absolute;
-        top:45%;
-        left:2%;
+        top:50%;
+        left:50%;
+        transform:translateX(-50%);
     }
     .web-list-button li{
         width:30px;
         height:30px;
+        padding:30px 0;
         cursor:pointer;
         float:left;
+        background-color:#8552b1;
+        opacity:0.5;
+    }
+    .web-list-button li:hover{
+        opacity:0.8;
     }
     .web-list-button li:last-child{
         float:right;
@@ -174,32 +321,32 @@
     }
     .web-info .info-con{
         width:100%;
-        font-size:13px;
         text-align:justify;
     }
     .web-info .info-title{
         text-align:center;
-        font-size:20px;
+     
     }
-    .contact-list{
-        height: 180px;
-    }
-    .contact-list li{
+    #contact-wrap{
         width:100%;
-        margin-bottom:15px;
-        clear:both;
     }
-    .contact-list li p{
-        width:20%;
-        height:100%;
-        float:left;
-        text-align:left;
+    #footer-wrap .center-wrap>p{
+      
+        line-height:30px;
     }
-    .contact-list li p:last-child{
-        width:75%;
-        line-height:75px;
-        margin-left:5%;
-        font-size:18px;
-        line-height:57px;
+    #footer-wrap p.thankyou{
+        width:100%;
+     
+    }
+    .contact-phone{
+       
+        font-weight:bold;
+    }
+    #contact-form input[type="submit"], #contact-form input[type="reset"]{
+     
+    }
+    .foot-logo-list{
+        width:50%;
+        padding:50px 0 20px 0;
     }
 }
