--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h1{
 h1 img{
     width:100%
 }
-h2{
+.realm h2{
     color:#fff;
     font-family: 'Monoton', cursive;
     font-size:4.375rem;
@@ -76,6 +76,10 @@ h2{
     transform:translateY(-50%);
     font-weight:normal;
     opacity:0.5;
+}
+#visual-wrap h2{
+    opacity:0;
+    text-indent: 999px;
 }
 nav{
     width:60%;
@@ -417,7 +421,7 @@ section{
 .web-list li:first-child:hover .web-img>img{
     top:-800px;
 }
-.web-list li:hover span{
+.web-list li:hover span, .web-list li:hover h3{
     background-color:#8552b1;
     color:#fff;
 }
