--- a/toast/css/sub.css
+++ b/toast/css/sub.css
@@ -47,10 +47,14 @@
 .sub-content-con{
     position:relative;
 }
-.sub-title{
+h2.sub-title{
+    position:static;
+    text-indent:0;
     width:100%;
     text-align:center;
     padding-top:130px;
+    font-size:38px;
+    opacity:1;
     color:#fff;
     
 }
@@ -62,7 +66,6 @@
     height:40px;
     top:0;
     left:0;
-    z-index:10;
 }
 #main .sub-header-static a{
     color:#000;
