모바일 페이지 수정

--- a/css/response.css
+++ b/css/response.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @media all and (min-width: 901px) and (max-width: 1430px){
+   
     html{
         font-size:14px;
     }
@@ -15,6 +16,66 @@
         width:90%;
         margin:auto;
     }
+    nav{
+        width:100%;
+        height:100vh;
+        position:absolute;
+        z-index:6;
+        top:0;
+        background:linear-gradient(to bottom, #81d3eb, #bbb8dc);
+        transition:all 0.5s;
+    }
+    nav.open{
+        right:0;
+    }
+    nav.close{
+        right:-100%;
+    }
+    .nav-btn{
+        display:block;
+        width:40px;
+        height:40px;
+        position:absolute;
+        right:1%;
+        top:20px;
+        z-index:7;
+        cursor:pointer;
+        border:2px solid #fff;
+        box-sizing: border-box;
+        border-radius: 10px;
+    }
+    .nav-btn div{
+        width:80%;
+        height:2px;
+        position:absolute;
+        top:17px;
+        left:10%;
+        background-color:#fff;
+        transform-origin:center left;
+        transition:all 0.3s;
+    }
+
+    .nav-btn div:first-child{ 
+        top:7px;
+    }
+    .nav-btn div:last-child{
+        top:27px;
+        
+    }
+    .main-menu{
+        width:20%;
+        float:right;
+        margin-right:5%;
+        padding-top:100px;
+    }
+    .main-menu li{
+        float:none;
+        width:100%
+    }
+    .main-menu a{
+        text-align:right;
+        letter-spacing: 1px;
+    }    
     .realm h2{
         padding-top:70px;
         width:50%;
@@ -121,8 +182,69 @@
        font-size:12px;
    }
    h1{
-       width:50%;
-   }
+       width:170px;
+       padding-top:15px; 
+    }
+    nav{
+        width:100%;
+        height:100vh;
+        position:absolute;
+        z-index:6;
+        top:0;
+        background:linear-gradient(to bottom, #81d3eb, #bbb8dc);
+        transition:all 0.5s;
+    }
+    nav.open{
+        right:0;
+    }
+    nav.close{
+        right:-100%;
+    }
+    .nav-btn{
+        display:block;
+        width:40px;
+        height:40px;
+        position:absolute;
+        right:1%;
+        top:10px;
+        z-index:7;
+        cursor:pointer;
+        border:2px solid #fff;
+        box-sizing: border-box;
+        border-radius: 10px;
+    }
+    .nav-btn div{
+        width:80%;
+        height:2px;
+        position:absolute;
+        top:17px;
+        left:10%;
+        background-color:#fff;
+        transform-origin:center left;
+        transition:all 0.3s;
+    }
+
+    .nav-btn div:first-child{ 
+        top:7px;
+    }
+    .nav-btn div:last-child{
+        top:27px;
+        
+    }
+    .main-menu{
+        width:20%;
+        float:right;
+        margin-right:5%;
+        padding-top:100px;
+    }
+    .main-menu li{
+        float:none;
+        width:100%
+    }
+    .main-menu a{
+        text-align:right;
+        letter-spacing: 1px;
+    }    
     #main-wrap .realm, #footer-wrap{
         height:auto;
     }
@@ -178,13 +300,6 @@
         top:50%;
         transform:translate(-50%,-50%);
     }
-    nav{
-        width:100%;
-    }
-    .main-menu a{
-        letter-spacing: 1px;
-       
-    }    
     .profile-img{
         width:150px;
         height:150px;
@@ -278,7 +393,7 @@
         width:100%;
         padding:50px 0;
         overflow:hidden;
-        z-index:8;
+        z-index:5;
     }
     #web-wrap .web-list li{
         width:95%;
